dualsub (1.1.0) precise; urgency=low

  * DualSub 1.1.0 release:
  + Support for date format HH:mm:ss.SSS
  + Moved site to http://bonigarcia.github.io/dualsub/

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 14 Sep 2015 19:51:00 +0200

dualsub (1.0.1) precise; urgency=low

  * DualSub 1.0.1 release:
  + Optimization of dialog instantiation
  + Changed groupId to io.github.bonigarcia
  + Adapted translation to new Google Translate API, now captcha is required (GitHub issue #6)

 -- Boni Garcia <boni.gg@gmail.com>  Sun, 16 Aug 2015 17:43:00 +0200

dualsub (1.0.0) precise; urgency=low

  * DualSub 1.0.0 release:
  + Merge capability for SRT files
  + Translation of SRT files using Google Translate
  + Persistence of configuration using Java preferences
  + Setup box: Player
  + Setup box: Timing
  + Setup box: Output
  + Setup box: Translation
  + Help for each feature and setup box
  + I18N: GUI translated to Arabic, Chinese, Danish, German, Spanish, Finnish,
    Greek, Hindi, Icelandic, Italian, Japanese, Norwegian, Portuguese, Russian,
    Swedish

 -- Boni Garcia <boni.gg@gmail.com>  Thu, 01 May 2014 21:57:36 +0200